--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Starting a new page. If you can read this, you should be doing something else
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+    <p>Paragraph</p>
+  </body>
+</html>
